# sem2_cpp_review

task1/: BasicMemoryTools.h  CMakeLists.txt  MemoryBlock.h  MemoryStack.cpp  StackAllocator.h  XorList.h  main.cpp  solve.cpp
task2/: Allocators.cpp  Allocators.h  CAllocatedOn.h  CMakeLists.txt  DEPRECATED!!!  GlobalAllocatorSwitcher.cpp  GlobalAllocatorSwitcher.h  MemoryBlock.cpp  MemoryStack.cpp  MemoryStack.h  SmartPointer.h  StackAllocator.h  f_.cpp  main.cpp
task3/: CMakeLists.txt  main.cpp  tuple.h
task4/: CMakeLists.txt  ahalaimahalai.h  main.cpp
